Grid View Data Overflow fixed

--- a/src/app/components/entity-management/list-entity/list-entity.component.css
+++ b/src/app/components/entity-management/list-entity/list-entity.component.css
@@ -10,7 +10,12 @@ mat-form-field{
     background-color: #0d476d;
     color: white;
   }
-  
+  .ellipsis {
+    max-width: 40px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap; 
+}
   
   
   
