--- a/src/app/components/user-management/list-users/list-users.component.css
+++ b/src/app/components/user-management/list-users/list-users.component.css
@@ -2,3 +2,13 @@ mat-form-field{
     width: 100%;
 }
    
+
+.slide-table tbody tr td{
+overflow: hidden;  
+} 
+.ellipsis {
+    max-width: 40px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap; 
+}  
